# script_popula_banco_de_dados_postgres_geobr

./: pyproject.toml  script.sql
import_data/: import_data.ipynb
